# comp2

./: .gitignore
Lab2_cuda/: README.md
Lab2_cuda/sources/: Makefile  dataset_generator.cpp  template.cu  test.sh  test_all.sh
Lab2_cuda/sources/BatchedMatMul/Dataset/0/: input0.raw  (+3 more)
Lab3_cuda/: README.md
Lab3_cuda/sources/: Makefile  dataset_generator_convolution.cpp  template_convolution.cu  test.sh
Lab4_cuda/: README.md
Lab4_cuda/libgputk/: gputkDataset.cpp  gputkExport.cpp  gputkFile.cpp  gputkPPM.cpp  gputkSolution.cpp
Lab4_cuda/sources/: Makefile  template_basic.cu  template_unified.cu  template_warp.cu  test.sh  test_all.sh
class_project/: .gitignore  CMakeLists.txt  README.md  package-lock.json
class_project/docs/: final_report.md  final_report_ko.docx  week2_notes.md
class_project/docs/submission_code/: README_SUBMISSION.md
class_project/docs/submission_code/include/hnsw_week2/: upper_descent.hpp
class_project/docs/submission_code/report/: final_report.md
class_project/docs/submission_code/scripts/: faiss_hnsw_multi_entry.py
class_project/docs/submission_code/src/: bench_gpu_upper_descent.cpp
class_project/docs/submission_code/tests/: week2_parity.cpp
class_project/include/hnsw_week2/: gpu_upper_descent.hpp  upper_descent.hpp
class_project/scripts/: export_faiss_upper_graph.py
class_project/src/: gpu_upper_descent.cu  gpu_upper_descent_stub.cpp  upper_descent.cpp
class_project/tests/: week2_parity.cpp
lab1_v2/Lab1_cuda/: README.md
lab1_v2/Lab1_cuda/sources/: Makefile  dataset_generator_matmul.cpp  dataset_generator_vecadd.cpp  template_matmul.cu  template_vecadd.cu
(+120 files in other folders)
